mysqld post update

--- a/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
@@ -7,7 +7,7 @@ categories:
 tags:
     - [NCP, Cloud]
 
-permalink: /NaverCloud/ex/12
+permalink: /NaverCloud/ex/13
 
 toc: true
 toc_sticky: true
@@ -20,20 +20,87 @@ last_modified_at: 2024-04-19
 
 Services - Database - Cloud DB for MySQL
 
-HOST(IP) : %(전체 접근 허용)
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-1.png" width="90%">
+</p>
 
-## 접근 제어를 위한 Public domain 관리
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-2.png" width="90%">
+</p>
 
-## SSL VPN
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-3.png" width="90%">
+</p>
 
-## Public 도메인 설정
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-4.png" width="90%">
+</p>
 
-Subnet ACL 설정
-ACG 추가 설정
+-   서버 세대 : G2
+-   DB 엔진 버전: 최신 버전 선택
+-   DB 라이센스: mysql의 경우 지정할 필요 없음
 
-## DBeaver 사용하여 연결
+-   고가용성 지원: 트러블 발생 시 전환
+-   Multi Zone : 안정성 증대
+
+-   USER_ID: DB 사용자 ID
+-   HOST(IP) : %(전체 접근 허용)
+-   USER 암호: 사용자 암호
+-   DB 접속 포트
+-   기본 DB명
+-   Backup 설정
+
+네이버 클라우드로 처음 DB를 만드는 사람일 경우 다음과 같은 창이 나타나면 이용신청을 해야한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-5.png" width="90%">
+</p>
+
+DB가 성공적으로 생성되었으면 다음과 같이 2개의 DB서버가 생성된다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-6.png" width="90%">
+</p>
+
+## 접근 제어를 위한 Public domain, ACG 설정
+
+외부에서 클라우드 DB서버를 접속하기 위해서 Public domain 값을 지정할 필요가 있다. Public domain을 지정하는 방법은 다음과 같다.
+
+DB 선택 - DB 관리 - Public 도메인 관리
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-7.png" width="90%">
+</p>
+
+생성된 public domain을 서버 선택 시 나타나는 상세 정보창에서 확인할 수 있다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-8.png" width="90%">
+</p>
+
+그 다음 외부에서 접근 할 수 있도록 DB서버를 생성하면서 자동으로 생성된 ACG의 Inbound, Outbound접근 권한을 해제한다.
+마찬가지로 Subnet의 ACL도 동일하게 설정해 주도록 한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-9.png" width="90%">
+</p>
+
+## DBeaver 사용하여 연결 테스트
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-10.png" width="90%">
+</p>
+- Server Host: Public domain
+- Port : 생성 때 지정한 port 숫자
+- Database: 생성 때 입력한 데이터베이스 명
+- Username: 생성 때 입력한 유저 명
+- Password: 생성 때 입력한 데이터베이스 암호
+
+해당 값을 입력하고 테스트 커넥션을 수행한다면 성공적으로 수행됨을 확인할 수 있음
 
 ## 모니터링
+
+DB에서 발생하는 이벤트들의 로그들을 확인하기 위해서 모니터링 설정을 해야한다.
 
 ### Event
 
@@ -41,9 +108,97 @@ Event Rule 설정
 
 상품 이용 신청
 
-Configuration - Event Rule - Event Rules 생성
+Services - Cloud DB for MySQL - Event
 
-### 테스트
+Event Rule 설정 클릭
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-11.png" width="90%">
+</p>
+
+만약 Cloud Insight 설정을 하지 않았더라면 다음과 같은 화면이 나타날 것이다. 상품 이용 신청 버튼을 클릭한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-12.png" width="90%">
+</p>
+
+Services - Cloud Insight - Configuration - Event Rule 창으로 이동됨
+
+Event Rules 생성버튼 클릭
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-13.png" width="90%">
+</p>
+
+감시할 상품 선택, 이번 실습의 경우 Cloud DB for MySQL 선택
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-14.png" width="90%">
+</p>
+
+그룹 생성 선택
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-15.png" width="90%">
+</p>
+
+로그를 확인할 대상을 선택하여 선택한 감시 대상 영역으로 넘기기
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-16.png" width="90%">
+</p>
+
+생성한 그룹을 선택한 뒤 다음 클릭
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-17.png" width="90%">
+</p>
+
+템플릿 생성 클릭
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-18.png" width="90%">
+</p>
+
+감시할 항목 선택
+
+-   mysql_slaverun
+-   mysql_slow
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-19.png" width="90%">
+</p>
+
+감시할 항목을 어떻게 로그로 정리할 것인지 설정한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-20.png" width="90%">
+</p>
+
+앞의 과정으로 템플릿을 생성하였다면 해당 템플릿을 선택한 후 다음을 클릭
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-21.png" width="90%">
+</p>
+
+Naver cloud Platform에서는 로그가 발생할 경우 Email, SMS를 통해서 로그 메시지를 받을 수 있다.
+통보 대상자를 클릭하여 개인 정보를 입력하여 전송을 확인해보자
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-22.png" width="90%">
+</p>
+
+다음 단계가 모두 끝났으면 마지막으로 이벤트 이름을 설정하고 최종 확인 후 생성한다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-23.png" width="90%">
+</p>
+
+### Failover 테스트
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex13-24.png" width="90%">
+</p>
 
 failover 실행
 
