redis post update

--- a/_posts/CloudComputing/NaverCloud/2024-04-19-Redis.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-19-Redis.md
@@ -16,32 +16,86 @@ date: 2024-04-19
 last_modified_at: 2024-04-19
 ---
 
-## DB 생성
+## Redis 생성
 
-Services - Database - Cloud DB for Redis
+### Subnet 생성
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-2.png" width="90%">
+</p>
+
+-   Subnet 이름
+-   VPC
+-   IP 주소 범위
+-   가용 Zone
+-   Network ACL
+-   Internet Gateway: `Redis는 Private Subnet에서만 생성 가능하므로 N을 선택`
+-   용도: 일반
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-1.png" width="90%">
+</p>
 
 ### Config Group 생성
 
--   Service - Database - Cloud DB for Redis - Config Group
+-   Service - Database - Cloud DB for Redis - Config Group - Config Group 생성 클릭
 
-version 설정 잘해야 한다.
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-2.png" width="90%">
+</p>
 
-### subnet 생성
+-   Version: version 설정을 생성할 DB와 일치하도록 설정.
+-   이름: config group이름
 
-redis는 private subnet을 생성해야 가능
+### Redis 생성
 
-### redis 생성
+-   Services - Database - Cloud DB for Redis - Redis 생성 선택
 
-추가적으로 backup 설정을 추가
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-3.png" width="90%">
+</p>
+
+-   생성 파라미터 입력
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-4.png" width="90%">
+</p>
+
+추가적으로 backup 설정
 
 ### ACG 접근 제어 풀기
 
-Services - Server - ACG
+-   Redis 서버가 성공적으로 생성되었다면 추가적으로 서버를 접근할 수 있도록 ACG 접근 권한을 설정해주어야 한다.
 
-자동 생성된 ACG 설정
+Services - Server - ACG를 확인하면 Redis를 생성하면서 자동으로 생성된 ACG 설정이 존재한다. 해당 설정을 선택하여 권한을 조정한다.
 
-Inbound 규칙만 설정
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-5.png" width="90%">
+</p>
 
-### 서버 접속 정보 확인
+Redis는 Private Subnet에서 동작하므로 Inbound 규칙만 설정한다.
 
-### 연결 확인
+### Redis 서버 접속을 위한 정보 확인
+
+-   설정이 완료되었다면 redis 접속에 필요한 정보를 확인하기 위해서 `생성된 서버를 클릭하고 - 관리 - Redis` 설정에 들어간다.
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-6.png" width="90%">
+</p>
+
+-   Redis의 DNS 정보를 확인한다.
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-7.png" width="90%">
+</p>
+
+### 연결 테스트
+
+-   네이버 클라우드 서버에서 redis-cli를 설치하고 다음과 같은 명령어를 입력하여 확인한다.
+
+```bash
+$ redis-cli -c -h [DNS 주소] -p 6379
+```
+
+<p align = "center">
+    <img src="/assets/images/NCP/ex14-8.png" width="90%">
+</p>
