--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -100,7 +100,7 @@ last_modified_at: 2024-04-05
 
 ### Hyper Visor
 
--   하드웨어와 VM사이에 VM과 하드웨어를 관리하기 위한 가상화 관리 소프트웨어
+-   하드웨어와 VM사이에서 VM과 하드웨어를 관리하기 위한 가상화 관리 소프트웨어
 
 <p align = "center">
     <img src="/assets/images/NCP/1-1.png" width="90%">
@@ -111,7 +111,40 @@ Type1, Type2로 나뉘어짐
 Type1: Xen, Hyper-V, KVM  
 Type2: VMWare, VirtualBox
 
+## 용어 설명
+
+### 리전(Region)
+
+-   리전이란 효율적인 서비스를 위해 주요 거점에 구축한 하나 이상의 존의 집합을 뜻하며 서비스를 제공하는 서버의 지리적 위치로 구분
+-   네이버 클라우드 플랫폼에는 다음 리전들이 존재
+
+    -   한국
+    -   일본
+    -   싱가포르
+    -   미국 서부
+    -   홍콩
+    -   독일
+
+-   싱가포르, 일본을 제외한 글로벌 리전에서는 SSD Server, Auto Scaling, Object Storage, NAS를 이용할 수 없음
+
+### 존(Zone)
+
+-   존이란 국가 단위의 `리전 내에 물리적으로 분리되어 존재하는 데이터 센터 및 네트워크`를 의미
+-   `각 존은 독립적`이라 특정 존에 장애가 발생해도 다른 존에 영향을 받지 않음
+-   멀티 존을 지원하는 지역은 다음과 같다.
+    -   한국
+    -   싱가포르
+    -   일본
+
+### HA(High Availability)
+
+고가용성
+
+-   HA는 하드웨어에서 발생한 장애가 VM서버로 확대되는 것을 방지하기 위한 서비스
+-   호스트 서버에 장애 발생 시 자동으로 호스트 서버 안에 있는 VM서버를 안정된 다른 호스트 서버로 옮기는 Live Migration을 지원
+
 ## 참조
 
 https://www.sharedit.co.kr/posts/5611  
 https://www.edwith.org/ncloudprofessional/lecture/173845?isDesc=false
+https://guide.ncloud-docs.com/docs/environment-environment-1-1
