--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -84,7 +84,7 @@ Acknowledgment Number
 
 -   특징
     -   VPC 환경에서 서버 생성을 위해서는 반드시 Subnet을 생성해야 하며, 서버는 Subnet안에 생성됨.
-    -   Subnet은 외무와의 통신이 가능한 Public Subnet, 내부 통신만 가능한 Private Subnet으로 구분됨
+    -   Subnet은 외부와의 통신이 가능한 Public Subnet, 내부 통신만 가능한 Private Subnet으로 구분됨
     -   서비스 환경에 맞는 다양한 로드 밸런서를 제공
     -   이외에도 다양한 Network 서비스/ Global DNS, DNS+, Global CND이 제공됨
 
