--- a/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
@@ -202,7 +202,6 @@ Naver cloud Platform에서는 로그가 발생할 경우 Email, SMS를 통해서
 
 failover 실행
 
-master와 standby Master의 Role change가 발생함
-
-master -> standby Master
-standby Master -> master
+-   master와 standby Master의 Role change가 발생함
+    -   master -> standby Master
+    -   standby Master -> master
