--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -88,7 +88,113 @@ Acknowledgment Number
     -   서비스 환경에 맞는 다양한 로드 밸런서를 제공
     -   이외에도 다양한 Network 서비스/ Global DNS, DNS+, Global CND이 제공됨
 
+### VPC
+
+-   클라우드 상에서 논리적으로 격리된 고객 전용 네트워크 공간
+
+    -   현재 한국 민간, 금융에 적용
+    -   계정당 최대 3개의 VPC 생성 가능
+
+-   IP 주소 범위
+
+    -   10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16 중에서 선택
+    -   최소 /28에서 최대 /16까지 Netmask 생성 가능
+    -   subnet을 이용하여 VPC 안에서 Segment 생성 관리 가능
+
+-   Peering
+    -   VPC 간 연결을 위한 네트워크 구성
+    -   내 VPC간 연결 뿐만 아니라 다른 계정과의 VPC 연결도 가능
+    -   타계정 VPC 연결시 로그인 ID, VPC ID, VPC명 입력 필요
+
+### VPC - ACG & NACL
+
+-   Network Access Control List(ACG)의 약자로 VPC 보안을 강화시키는 요소
+-   NACL이 Subnet에 적용되어 외부에서 접속시 NACL 룰 검사가 먼저 진행(Allow / Deny 모두 설정 가능, 상태 비저장 방식)
+
+| ACG                       | Network ACL                                         |
+| ------------------------- | --------------------------------------------------- |
+| 서버 단위로 적용          | Subnet 단위로 적용                                  |
+| Allow 규칙에 한하여 적용  | Allow, Deny 규칙 모두 지원                          |
+| Response 트래픽 자동 허용 | Response 트래픽에 대한 Allow 규칙이 추가적으로 필요 |
+| 모든 규칙을 확인하여 판단 | 우선순위에 따라 규칙을 반영                         |
+
+-   VPC 환경에서는 서버, Subnet에 적용된 ACG와 NACL을 다른 ACG와 NACL로 변경 가능
+
+-   NACL 생성
+    -   VPC에 종속적인 Network ACL 생성 가능
+    -   Subnet 레벨에서 동작
+
+### VPC - Subnet
+
+-   Subnet 속성
+    -   VPC 주소 범위 내에서 CIDR 형태로 주소 범위 지정
+    -   Zone을 지정할 수 있으며 동일한 Zone 내에 여러 Subnet 생성 가능
+    -   인터넷과 연결되는 Public Subnet과 폐쇄적인 Private Subnet으로 구분
+    -   Public Subnet내에 있는 서버만 Public IP 부여 가능
+    -   VPC당 최대 200개의 Subnet 생성 가능
+-   Public Subnet
+    -   서버만 위치시킬 수 있으며 서버에 공인 IP를 부여할 수 있다.
+-   Private Subnet
+    -   서버 혹은 로드밸런서를 위치시킬 수 있다.
+
+### NAT Gateway
+
+-   (Classic) 비공인 IP를 가진 다수의 서버에게 대표 공인 IP를 이용한 외부 접속
+    -   금융사, 통신사와 같이 나가는 IP에 대한 정보가 필요한 경우 사용
+    -   일반적으로 서버에 공인 IP를 부여하면 되지만 내부 서버가 다수일 경우 서버마다 공인 IP를 부여하면 관리 비용이 증가, NAT Gateway를 이용하면 공인 IP 낭비를 줄일 수 있음
+-   (VPC) Private Subnet에서 외부로의 통신이 필요한 경우, 외부 접속을 제공
+    -   Private Subnet은 Internet Gateway가 없기 때문에, Default 외부 통신 불가
+    -   NAT Gateway를 연결하고, Route Table을 수정하여 외부 접속을 가능하도록 설정할 수 있음
+
 ### Load Balancer
+
+-   Target Group
+    -   요청을 처리할 대상에 대한 집합
+    -   동일 VPC 내에 있는 서버들에 대해 타겟 그룹 생성 가능
+    -   타겟 그룹 안에 있는 서버를 다른 타겟 그룹에 속하게 할 수 있지만 타겟 그룹을 다수의 로드 밸런서에 연결할 수 없다.
+    -   서버스를 수행하는 대상의 프로토콜에 따라 L4와 L7으로 구분
+    -   헬스 체크 주기(5~300초) 및 임계값 설정
+    -   기본은 Round Robin 설정
+        -   알고리즘 및 Sticky, ProxyProtocol 설정 변경은 생성 이후에 진행
+-   프로토콜
+
+    -   TCP: Network Load Balancer
+    -   Proxy_TCP: Network Proxy Load Balancer
+    -   HTTP: Application Load Balancer
+    -   HTTPS: Application Load Balancer
+
+-   로드밸런서
+
+    -   부하처리 성능에 따라 Small/ Medium / Large 중에 선택할 수 있으며 각각 초당 연결수 (CPS)기준 최소 30,000 / 60,000 / 90,000 개의 분산 처리를 보장함.
+
+-   로드 밸런싱 알고리즘
+
+    -   Round-Robin Scheduling: 클라이언트에서 요청이 오면 서버에 1개씩 분배하는 방식
+    -   Least-Connection: 클라이언트 연결이 제일 적은 서버에게 새로운 커넥션을 분배
+    -   Source Hash Scheduling: 클라이언트 IP에 대한 해시테이블을 가지고 클라이언트 IP에 매핑되는 서버에 새로운 커넥션을 분배
+
+-   애플리케이션 로드밸런서
+    -   HTTP, HTTPS를 사용하는 웹 애플리케이션에 보다 유연한 구성이 가능
+    -   고정 IP 제공
+    -   URL 기반 분기 가능
+    -   알고리즘은 3가지 제공
+-   네트워크 로드 밸런서
+    -   고성능의 분산처리 가능
+    -   Client IP가 그대로 로깅
+    -   알고리즘은 Hash, RR만 제공
+-   네트워크 프록시 로드밸런서
+
+    -   Classic과 유사한 로드밸런서
+
+-   TCP 레벨 고성능 분산처리 - 네트워크 로드밸런서
+-   TCP 세션 관리 - 네트워크 프록시 로드밸런서
+-   SSL인증 및 암호화 설정 - 애플리케이션 로드밸런서, 네트워크 프록시 로드밸런서
+-   다양한 서버 부하 분산 방식 - 애플리케이션 로드밸런서, 네트워크 프록시 로드밸런서
+
+-   타입별 기능 비교
+<p align = "center">
+    <img src="/assets/images/NCP/3-3.png" width="90%">
+</p>
 
 -   LB의 구성 방식
     -   NAT
@@ -117,6 +223,29 @@ Acknowledgment Number
     -   18080~18095, 65130, 65131, 64000, 3389, 22 포트는 관리용 포트이기 때문에 사용 불가
     -   최대 50대 서버 바인딩
 
+#### 로드 밸런서의 기본적인 설정값
+
+-   KeepAlive & Connection Idel Time
+
+    -   On이 필요한 경우
+        -   메모리가 충분하고
+        -   컨텐츠 서븟 형태여서
+        -   사용자가 지속적으로 서버에 요청하는 경우
+    -   Off가 필요한 경우
+        -   메모리가 충분하지 않고
+        -   사용자가 서버에 지속적으로 머물지 않는 경우
+
+-   SSL 이용시 Redirect
+    -   SSL을 이용할 경우 LB는 TCP 443포트로 받고 80포트 서버로 전달
+    -   서버 입장에서는 HTTP로 접근하는지 HTTPS로 접근하는지 확인 필요
+-   서버에 추가로 포트 개방하고 LB 80포트를 해당 포트에 연결하여 Redirect
+    -   서버에 8080포트도 웹서버에서 Listen하도록 설정
+    -   LB에서는 80포트로 오는 패킷을 8080으로 전달
+    -   서버에서 8080포트로 오는 접근은 443으로 Redirect
+-   X-Forwarded헤더를 이용
+    -   X-Forwarded-Proto헤더를 이용하여 연결에 사용한 프로토콜을 식별
+    -   HTTP로 온 경우 HTTPS로 Redirect
+
 ### DNS
 
 -   도메인에 대해 IP로 변환하는 서비스
@@ -130,3 +259,160 @@ Acknowledgment Number
     -   레코드 타입
     -   TTL
     -   레코드 값
+
+### Global Route Manager(GRM)
+
+Classic
+
+-   DNS 기반으로 글로벌 트래픽을 안정적으로 로드밸런싱하는 상품
+    -   DNS 기반으로 로드밸런싱
+    -   글로벌 환경에서 지역별 트래픽 분산
+    -   LB와 다른점은 LB가 리전에 국한된다면 GRM은 리전에 국한하지 않고 로드밸런싱
+
+#### Global Route Manager - GSLB(Global Server Load Balancing)
+
+-   기존 로드 밸런서는 IP에 대해 로드밸런싱하며 리전 내에서만 바인딩 가능
+-   LB와 차이점
+    -   모니터링 주기: 최소 30초부터 60초, 180초, 300초까지 제공
+    -   리전 뿐만 아니라 Custom IP입력 가능
+
+|로드 밸런싱 타입| 리소스 타입 | 설명|
+| Roud Robin | IP | 최대 16개까지 리소스 추가 가능. <br> 요청에 대해 공평하게 순차적으로 리소스가 응답|
+| Weighted | IP, Domain | 최대 16개까지 리소스 추가 가능 <br> 각 리소스 별로 처리하는 트래픽 양에 대한 가중치를 주어 요청에 따른 트래픽을 분배 <br> IP와 Domain을 혼용하여 추가할 수 없음|
+| Fail Over | Active : IP | 최대 16개까지 리소스 추가 가능 <br> Active로 설정된 리소스가 응답을 하며 Health Check Fail 되면 Standby리소스가 응답합니다. |
+| Fail Over | Standby : IP, Domain | 최대 16개까지 리소스 추가 가능 <br> Active 리소스가 fail시에 standby리소스가 응답 <br> IP와 Domain을 혼용하여 추가할 수 없음|
+
+#### Global Route Manager - GRM
+
+-   사용자 위치를 기준으로 접속 가능한 도메인을 지정하고 해당 도메인으로 접속을 유도
+-   한국, 미국, 독일, 일본, 홍콩, 싱가폴과 그외 지역으로 구분
+
+| 로드밸런싱 타입 | 리소스 타입 | 설명                                                                                                                                                                                                                                                                            |
+| --------------- | ----------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| GeoLocation     | Domain      | 글로벌 서비스에 최적화된 로드 밸런싱 타입 <br> 사용자의 위치를 기준으로 대륙 혹은 국가 단위 분기가 가능하며, IP주소 대역 기준으로 한 분기 설정도 가능. <br> Geo Map메뉴에서 고객에게 꼭 맞는 Map을 손쉽게 구성할 수 있으며, IP 주소 대역 기준으로 CIDR Map을 구성하는 것도 가능 |
+
+### CDN+
+
+-   사용자에게 컨텐츠를 보다 빠르고 안정적으로 전송하는 서비스
+    -   원본 위치는 파일 스토리지 혹은 오리진 서버를 둘 수 있음
+    -   CDN을 사용하기 위해서는 CDN 도메인 혹은 보유 도메인을 이용하여야 함.
+-   CDN이 언제 필요한가?
+    -   대규모 파일 배포나 이미지 서비스, 동영상 서비스 등 대규모로 트래픽이 발생하는 경우
+    -   웹서버를 통해 배포하게 되면 웹서버의 용량이 기하급수적으로 커져야함.
+    -   이러한 대규모 트래픽에 효과적으로 대응하기 위한 서비스
+-   CDN에서 제공되는 형태
+    -   원본 서버 캐싱(파일 다운로드도 서버 캐싱의 형태)
+    -   스트리밍: 동영상이나 음악 파일을 스트리밍으로 제공하는 경우
+
+#### CDN+ 주요 옵션
+
+-   캐싱(caching): 사용자 요청에 의해 요구되는 콘텐츠를 빠르게 제공하기 위해 캐시 서버에 저장
+-   캐싱 status:
+
+    -   1. Cache Miss: 콘텐츠 초기 요청 등 콘텐츠가 캐시 서버에 없는 경우(원본 서버로부터 콘텐츠 전송 응답 및 캐싱)
+    -   2. Cache Hit: 캐시 서버에 저장된 콘텐츠를 전송 응답
+
+-   Cashing Expiry
+    -   CDN+ 캐시 서버에서 캐싱된 콘텐츠가 원본 서버에서 변경되었는지 여부를 확인하는 주기를 지정합니다. 단, 원본 서버의 응답 헤더에 Cache-Control: max-age가 존재하면 해당 설정이 우선됩니다. 콘텐츠를 자주 업데이트하는 경우에는 짧게 지정하여 설정합니다. 단, 짧게 지정하면 원본의 부하가 늘어나니 주의해서 사용합니다.
+-   Purge
+    -   Purge는 캐시 서버에 저장된 콘텐츠를 삭제하는 기능
+    -   대규모 수행 시 원본 부하 고려 필요
+-   압축 설정
+
+    -   사용자의 User-Agent(브라우저 혹은 Device)가 Gzip/Unzip을 지원할 경우 콘텐츠를 압축하여 사용자에게 전달함으로써, 네트워크 품질이 낮은 사용자에게 압축 전송을 하면 응답 속도를 개선할 수 있음.
+    -   원본 서버에서 콘텐츠 확장자 혹은 요청 헤더에 따라 압축/미압축 응답을 유연하게 적용하기 위해서는 원본의 압축 설정과 동일하게 적용을 선택
+
+-   컨텐츠를 배포할 경우 사용자 별 컨텐츠 엑세스 권한을 제한할 필요가 있으며, CDN 상품을 이용해서 프라이빗 컨텐츠에 대한 엑세스를 제한하는 방법은 아래와 같이 2가지 방법이 있음
+-   Secure Token을 이용해서 다운로드 허용 시간 설정
+
+    -   Secure Token은 일회성으로 Access Token을 생성하여 콘텐츠 요청 시 인증을 통과한 요청에만 콘텐츠를 응답
+    -   Secure Token을 생성하는 SDK를 Programming 언어별 제공(Python, JAVA, Ruby, NodeJS)
+
+-   Referrer설정을 통한 인가된 요청만 컨텐츠 딜리버리
+    -   컨텐츠를 요청하는 Referrer에 따른 컨텐츠에 대한 접근 제어를 설정
+    -   기본 설정으로 Referrer가 없는 경우에 대해서도 컨텐츠 접근을 허용하므로 특정 Referrer에 대해서만 허용하려면 CDN 상품 생성 시 엑세스를 허용할 도메인 설정과 레퍼러 없는 경우 허용 여부 설정을 허용 안함으로 선택해야 함.
+
+### Global CDN
+
+-   CDN+가 국내용 CDN서비스인데 반해 글로벌 CDN 서비스를 이용하고자 할때
+    -   아카마이를 통해 CDN 서비스
+-   CDN+와 GCDN을 동시에 이용하고자 하는 경우
+    -   GRM을 이용하여 해외 트래픽 분산
+
+### IPSec VPN
+
+-   Legacy 인프라와 네이버 클라우드 플랫폼간 사설 네트워크 연결을 위한 망 to 망 VPN
+-   필요 설정 사항
+    -   네이버 클라우드 플랫폼내 서버들은 Private Subnet으로 구성
+    -   서버들은 Private Subnet 대역ㅇ의 Network Interface가 추가/구성되어야 함.
+    -   Legacy인프라 IP 대역이 10.x.x.x인 경우 라우팅에 문제가 발생할 수 있는 만큼 IP 대역을 세분화할 필요가 있다.
+    -   서버 내부 라우팅 설정 필요
+    -   Private Subnet 대역의 Network Interface의 Gateway는 192.168.x.1
+-   VPN 생성 순서
+    -   Gateway 설정: zone, 대역폭, IKEv1 Policy 설정
+    -   Tunnel 설정: 네트워크 정보, Peer IP 주소, Preshared Key, IPSEC Proposal, Security Association, Lifetime, Dead Peer Detection 설정
+
+## Media 상품군 소개
+
+### Live Station
+
+-   트랜스코딩을 통해 여러 화질로 변환 후 송출
+-   HLS, DASH, RTMP 프로토콜로 송출
+-   스트림 상태를 볼 수 있는 모니터링 기능 제공
+-   Thumbnail image 추출
+-   타임머신(Time Shift)기능으로 놓치지 않는 라이브 방송 서비스 구현 가능
+-   CDN 연동을 통해 안정적인 송출 가능
+-   Re-Stream 기능으로 타 플랫폼으로 중계
+-   영상을 저장할 수 있는 DVR 기능 제공(최대 6시간)
+
+### VOD 스트리밍 플랫폼
+
+-   Object Storage에 보관된 영상 파일을 이용하여 스트리밍 서비스 제공
+-   HLS, DASH 프로토콜 지원
+-   CDN 연동을 통해 안정적인 송출 가능
+-   Live Station, VOD Transcoder와 연동하여 사용 가능
+-   Media Encryption과 DRM을 통한 미디어 보호
+
+### VOD Transcoder
+
+-   대규모 동영상 파일 변환 서비스
+    -   원본 파일을 다양한 디바이스에 맞게 인코딩
+    -   LT의 저장된 영상 이용 가능
+    -   동시 최대 5개의 미디어 파일 포맷으로 변환
+
+### Image Optimizer
+
+-   이미지를 다양한 사이즈로 변환
+
+    -   쿼리 스트링으로 만든 룰을 기반으로 이미지 리사이즈 & 크롭
+    -   정해진 Object Storage에 업로드하면 자동으로 리사이즈 & 크롭
+    -   얼굴인식 기능, 워터마크 삽입 기능 제공
+    -   샤픈, 블러, 흑백 필터 기능 제공
+    -   섬네일 호출 URL은 상품 등록 당시의 [CDN 도메인] + [오브젝트 스토리지 내의 파일 경로] + [섬네일 생성 옵션]과 같이 3가지 영역으로 생성
+
+-   이미지 효과
+    -   크기
+        -   리사이즈 & 크롭
+            -   가로, 세로, 크롭 위치, 얼굴 인식, 품질, 자동회전, 애니메이션 이미지 컷수, 포맷
+    -   워터마크
+        -   워터마크 이미지 경로, 워터마크 위치, 워터마크 위치 오프셋
+    -   필터
+        -   샤픈, 블러, 흑백
+-   변환 이미지 미리보기
+
+### Video Player
+
+-   네이버 동영상 서비스를 통해 검증된 플레이어 엔진을 미디어 서비스에 적용할 수 있도록 제공되는 클라우드 서비스
+-   플레이어 생성 시, 플레이어 사이즈, 버전, 플레이어 저장 위치 등을 설정함
+    -   플레이어 사이즈: 반응형(웹브라우저 크기에 따라 비율이 조정), 고정형(정의된 비율로 고정)
+-   플레이어상에 설정 가능한 기능
+    -   재생 속도 조절 기능: 재생 속도를 조절할 수 있는 기능
+    -   브라우저 최소화 시, 자동 정지: 브라우저를 최소화하면 영상 재생이 자동으로 정지
+    -   자막 지원 기능: 자막 기능을 on/off할 수 있는 기능
+
+|                | Ncloud Video Player                        | 타사 플레이어                                  |
+| -------------- | ------------------------------------------ | ---------------------------------------------- |
+| 호환성         | Ncloud 최적화                              | 검증 필요                                      |
+| 확장성         | NCloud 미디어 상품과 조합을 통해 확장 가능 | 미디어 서비스에 통합되어 서비스 선택 제약 발생 |
+| 모바일 앱 지원 | 별도의 앱 제공                             | 지원 안됨                                      |
+| 통계 제공      | 제공                                       | 분리 통계 불가                                 |
