--- a/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-08-DBManage.md
@@ -136,4 +136,37 @@ last_modified_at: 2024-04-08
 
 ## Management
 
+IT 인프라와 서비스를 실시간으로 모니터링하고 관리하여 고객에게 24시간 365일 안정적인 클라우드 서비스를 제공하는 서비스이며 Resource Manager, WMS, Sub account, Cloud Activity Tracer, Cloud Insight, Organization, Pinpoint Cloud, Cloud Advisor 서비스가 해당됨.
+
+### Sub Account
+
+Sub Account란 Role based 기반의 권한 관리 서비스. 내부 사용자를 서브 계정으로 등록하고, 특정 서비스에 대한 권한을 부여. 특정 서비스에 대한 권한은 custom policy로 생성하여 관리
+
+> 네이버 클라우드 플랫폼의 sub Account 활용 예
+>
+> -   다수의 사용자가 동일한 인프라를 이용하고 관리할 때
+> -   일부 사용자에게 인프라에 대한 한정된 권한을 부여
+> -   네이버 클라우드 플랫폼의 SourceCommit을 사용
+
+#### Sub Account 세부 기능
+
+-   Dashboard
+
+    -   서브 계정이 접속할 수 있는 페이지 설정 및 서브 계정 수/ 그룹 수/ 정책 수/ 접속 페이지 설정 / 최근 이벤트 로그(서브 계정이 작업한 로그)를 확인
+
+-   sub Accounts
+
+    -   새로운 서브 계정을 생성하거나 기존에 있는 서브 계정의 정보를 수정/삭제, 일시정지/해지 가능
+    -   각 서브 계정 상세 페이지에는 그룹, 정책을 추가/삭제하거나 API Gateway 사용에 필요한 API key를 관리할 수 있음
+
+-   접근 유형
+
+    -   Console Access: 서브 계정의 콘솔 접근을 허용, 서브 계정의 관리 콘솔 접근 IP를 대역으로 제한 가능
+    -   API Gateway Access: API Gateway 접근을 허용하며, 해당 항목을 선택하면 서브 계정 생성 후 상세 페이지에서 Access Key를 관리하고 해당 키를 이용하여 API Gateway를 사용할 수 있음.
+
+-   2차 인증 설정
+    -   서브 계정이 2차인증을 필수로 설정하여 사용하도록 할 수 있음
+    -   2차 인증을 위한 정보는 서브계정이 최초 로그인할 때 처음 설정 포털에서 수정할 수 있음
+-   비밀 번호 재설정 필요
+
 ## Analytics
