post 분리 및 순서 조정

--- a/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-19-MySQLDB.md
@@ -50,7 +50,11 @@ Services - Database - Cloud DB for MySQL
 -   기본 DB명
 -   Backup 설정
 
-네이버 클라우드로 처음 DB를 만드는 사람일 경우 다음과 같은 창이 나타나면 이용신청을 해야한다.
+<br>
+<br>
+
+네이버 클라우드로 처음 DB를 생성하는 경우  
+다음과 같이 Cloud Log Analytics 신청창이 나타나는데 이용신청을 선택하면된다.
 
 <p align = "center">
     <img src="/assets/images/NCP/ex13-5.png" width="90%">
