--- a/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-07-Network.md
@@ -111,12 +111,16 @@ Acknowledgment Number
 -   Network Access Control List(ACG)의 약자로 VPC 보안을 강화시키는 요소
 -   NACL이 Subnet에 적용되어 외부에서 접속시 NACL 룰 검사가 먼저 진행(Allow / Deny 모두 설정 가능, 상태 비저장 방식)
 
+<center>
+
 | ACG                       | Network ACL                                         |
 | ------------------------- | --------------------------------------------------- |
 | 서버 단위로 적용          | Subnet 단위로 적용                                  |
 | Allow 규칙에 한하여 적용  | Allow, Deny 규칙 모두 지원                          |
 | Response 트래픽 자동 허용 | Response 트래픽에 대한 Allow 규칙이 추가적으로 필요 |
 | 모든 규칙을 확인하여 판단 | 우선순위에 따라 규칙을 반영                         |
+
+</center>
 
 -   VPC 환경에서는 서버, Subnet에 적용된 ACG와 NACL을 다른 ACG와 NACL로 변경 가능
 
@@ -287,9 +291,13 @@ Classic
 -   사용자 위치를 기준으로 접속 가능한 도메인을 지정하고 해당 도메인으로 접속을 유도
 -   한국, 미국, 독일, 일본, 홍콩, 싱가폴과 그외 지역으로 구분
 
+<center>
+
 | 로드밸런싱 타입 | 리소스 타입 | 설명                                                                                                                                                                                                                                                                            |
 | --------------- | ----------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | GeoLocation     | Domain      | 글로벌 서비스에 최적화된 로드 밸런싱 타입 <br> 사용자의 위치를 기준으로 대륙 혹은 국가 단위 분기가 가능하며, IP주소 대역 기준으로 한 분기 설정도 가능. <br> Geo Map메뉴에서 고객에게 꼭 맞는 Map을 손쉽게 구성할 수 있으며, IP 주소 대역 기준으로 CIDR Map을 구성하는 것도 가능 |
+
+</center>
 
 ### CDN+
 
@@ -410,9 +418,13 @@ Classic
     -   브라우저 최소화 시, 자동 정지: 브라우저를 최소화하면 영상 재생이 자동으로 정지
     -   자막 지원 기능: 자막 기능을 on/off할 수 있는 기능
 
+<center>
+
 |                | Ncloud Video Player                        | 타사 플레이어                                  |
 | -------------- | ------------------------------------------ | ---------------------------------------------- |
 | 호환성         | Ncloud 최적화                              | 검증 필요                                      |
 | 확장성         | NCloud 미디어 상품과 조합을 통해 확장 가능 | 미디어 서비스에 통합되어 서비스 선택 제약 발생 |
 | 모바일 앱 지원 | 별도의 앱 제공                             | 지원 안됨                                      |
 | 통계 제공      | 제공                                       | 분리 통계 불가                                 |
+
+</center>
