--- a/_posts/project/2024-05-26-hierachy.md
+++ b/_posts/project/2024-05-26-hierachy.md
@@ -19,17 +19,15 @@ last_modified_at: 2024-05-26
 
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 
-## 가계부 구현 프로젝트
+## 위계 질서 프로젝트
 
 ### 프로젝트 개요
 
-BitCamp 클라우드 개발자 과정 8기 3번째 프로젝트 온라인 결재 시스템이다.
-해당 프로젝트는 사용자에게 온라인 문서 결재 기능을 제공한다.
-자세한 기능 설명은 하단의 Github 주소를 참조해주길 바란다.
+온라인 결재 시스템을 통하여 사원 보고 관리 및 조직도 기능 구현
 
-| 인원 | 프로젝트 기간          | 개발 영역                                                |
-| ---- | ---------------------- | -------------------------------------------------------- |
-| 6명  | 2024.3.15 ~ 3.24 (9일) | 로그인 기능, 채팅 기능, 서버와 클라이언트 연결 전반 설계 |
+| 인원 | 프로젝트 기간               | 개발 영역                                                |
+| ---- | --------------------------- | -------------------------------------------------------- |
+| 6명  | 2024.5.2 ~ 2024.5.16 (14일) | 로그인 기능, 채팅 기능, 서버와 클라이언트 연결 전반 설계 |
 
 ### 프로젝트 Github 저장소
 
