--- a/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
+++ b/_posts/CloudComputing/NaverCloud/2024-04-05-overview.md
@@ -74,6 +74,7 @@ last_modified_at: 2024-04-05
 </p>
 
 -   1960년대 가상화라는 용어 사용
+    -   서버의 리소스를 효율적으로 사용하기 위해서 가상화 사용
     -   당시에는 전 가상화 기법을 사용하여 구현
     -   에뮬레이터도 존재
 -   다양한 하이퍼바이저의 출현
