--- a/_posts/project/2024-05-26-hierachy.md
+++ b/_posts/project/2024-05-26-hierachy.md
@@ -34,3 +34,7 @@ last_modified_at: 2024-05-26
 [온라인 결재 시스템 깃허브](https://github.com/maruduke/bitcamp_hierarchy)
 
 #### 사용 스택
+
+### 프로젝트 구조
+
+Spring Boot와 MongoDB 활용
